--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,11 @@
 {
-  "short_name": "Canvas Draw",
-  "name": "Canvas Drawing App",
-  "icons": [
-    {
-      "src": "icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ],
+  "name": "Drawing App",
+  "short_name": "Draw",
   "start_url": "./",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000"
+  "icons": [{
+    "src": "icon.png",
+    "sizes": "192x192",
+    "type": "image/png"
+  }]
 }
