--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,15 @@
 {
-  "name": "Draw App",
   "short_name": "Draw",
-  "start_url": "./",
+  "name": "Draw App",
+  "icons": [
+    {
+      "src": "icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "index.html",
   "display": "standalone",
-  "icons": [{
-    "src": "icon.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }]
+  "background_color": "#ffffff",
+  "theme_color": "#F5F5F5"
 }
